# BlobToChar

./: CMakeLists.txt  README.md
src/: Argparse.cpp  Argparse.h  CMakeLists.txt  FileManager.cpp  FileManager.h  main.cpp
